# DynTuning

./: .clang-format  .gitignore  .gitmodules  00-full-cloud-build.sh  CMakeLists.txt  Dockerfile  Dockerfile.dev  README  build.sh  install-env.sh  main.cpp  nvcc.sh  run.sh  scratch  server.sh  setup-env.sh  vimrc
cntr/: build-cntr.sh  kokkos-420-gcc-114-cuda-120.def
examples/: nlsm.cpp
examples/kernels/: kernel_nlsm.hpp
scripts/: plot_kernel_timings.py  plot_some_kernelblocks.py
src/: algorithm.hpp  common.hpp  data.hpp  data_deps.hpp  data_transfers.hpp  kernel.hpp  kernel_matmatmult.hpp  kernel_matmul_kernels.hpp  kernel_matvecmult.hpp  kernel_mmm.hpp  kernel_mvm.hpp  kernel_vectorouter.hpp  kernel_vvm.hpp  kernel_vvv.hpp  main.cpp  optimizer.hpp  range.hpp  test_kernel_block_sizes.cpp  test_kernel_thread_sizes.cpp  test_view_transfer.cpp  view.hpp
src/kernels/: kernel_branch_testkernel.hpp  kernel_branch_testkernel2d.hpp  kernel_matmatmult.hpp  kernel_matmul_3d.hpp  kernel_matmul_eigenkokkos.hpp  kernel_matmul_kernels.hpp  kernel_matrix_weirdsum.hpp  kernel_matsum.hpp  kernel_matvecmult.hpp  kernel_testr0.hpp  kernel_vectordot.hpp  kernel_vectorouter.hpp  kernel_xderiv_2d.hpp  kernel_xderiv_3d.hpp  kernel_xxderiv_2d.hpp  kernel_xxderiv_3d.hpp  kernel_yderiv_2d.hpp  kernel_yyderiv_2d.hpp  kernel_yyderiv_3d.hpp  kernel_zzderiv_3d.hpp
tests/: algorithm.test.cpp  data.test.cpp  data3d.test.cpp  derivs.test.cpp  kernels.test.cpp  main.cpp  matmul.test.cpp  optimizer.test.cpp  test.cpp  test_config.hpp
tests/helpers/: algorithm_build_views.cpp  optimizer_build_views.cpp
